# gentle-intro-to-ranges

./: .gitmodules  CMakeLists.txt  README.md  a-gentle-intro-to-ranges-v3.html  open-sans.css
talk/: a-gentle-intro-to-ranges-v3.html  muell.cpp
test-catch/: CMakeLists.txt  accessing_elements.cpp  composition.cpp  conversion_to_stl.cpp  dangling_references.cpp  dual_interface.cpp  generating_sequences.cpp  group_by.cpp  partitioning.cpp  remove_if.cpp  set_operations.cpp  transform.cpp  yield_if.cpp
